lab.css
body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: grid;
    grid-template-areas: 
        "header header header"
        "nav content aside"
        "info info aside"
        "footer footer footer";
    grid-template-columns: 1fr 3fr 1fr;
    grid-template-rows: auto 1fr auto auto;
}

p, h2, h3{
    margin: 10px 25px 10px 10px;
}

.content, aside {
    display: grid;
    align-items: center;
    justify-content: right;
}

header, footer {
    background-color: lightblue;
    display: grid;
    grid-template-columns: 1fr 3fr;
    justify-items: right;
    align-items: center;
}

header {
    grid-area: header;
}

header h2 {
    background-color: white;
    text-align: right;
}

nav {
    grid-area: nav;
    display: grid;
    align-items: center;
    justify-content: center;
    background-color: lightgoldenrodyellow;
    grid-template-rows: 1fr;
}

.content {
    grid-area: content;
}

aside {
    grid-area: aside;
    background-color: lightgoldenrodyellow;
}

.info {
    grid-area: info;
    background-color: lightgreen;
    display: grid;
    align-items: center;
}

footer {
    grid-area: footer;
}

footer h2 {
    background-color: #ffffff;
}

